# ticketapp

./: .gitignore  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4b21f0c18034_init.py
backend/app/: main.py
backend/app/core/: config.py  security.py  session.py
backend/app/schemas/: ticket.py  user.py
