[project]
name = "ticketapp-backend"
version = "0.1.0"
description = "Ticketapp backend API."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "alembic>=1.14",
    "pydantic-settings>=2.7",
    "asyncpg>=0.30",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
